# turtlebot_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
group18_apriltag_ros/launch/: camera_36h11.launch.yml
group18_interfaces/: CMakeLists.txt  package.xml
group18_interfaces/srv/: TableCount.srv
group18_mission_control/: CMakeLists.txt  package.xml
group18_mission_control/include/group18_mission_control/: circle.hpp  corridor_navigator.hpp  initial_pose_publisher.hpp  initial_pose_setter.hpp  lifecycle_manager.hpp  navigate_to_pose_client.hpp  tables_detection.hpp
group18_mission_control/launch/: camera_36h11.launch.yml  group18_assignment_1.launch.py
group18_mission_control/src/: circle.cpp  corridor_navigator.cpp  initial_pose_publisher.cpp  initial_pose_setter.cpp  lifecycle_manager.cpp  navigate_to_pose_client.cpp  tables_detection.cpp
include/group18_assignment_1/: lifecycle_manager.hpp
src/: lifecycle_manager.cpp
src/18_assignament_1/: CMakeLists.txt  package.xml
src/18_assignament_2/: CMakeLists.txt  package.xml
src/navigation_trial/: CMakeLists.txt  package.xml
src/navigation_trial/src/: manage_lifecycle_nodes.cpp
